# obby-gym

./: .gitignore  ObbyRL-M3-Curriculum.rbxlx  README.md  ROBLOX_OBBY_RL_PLAN.md  aftman.toml  default.project.json  plugin.project.json  pyproject.toml  roblox.yml  stylua.toml
artifacts/: README.md
builds/: fishing_game.v2.plan.json
configs/: gap_course.v1.json  m0.json  m3_fixed_ppo.json  procedural_course.v1.json
docs/: ABLATIONS.md  M0_DECISIONS.md  M0_STATUS.md  M1_PERFORMANCE_DECISION.md  M1_STATUS.md  M2_STATUS.md  M3_PRIVILEGED_TEACHER.md  M3_STATUS.md  M3_VECTOR_ENV.md  index.html  script.js  styles.css
media/: README.md  manifest.json
orchestrator/: runner.py
plugin/: ObbyRLBridge.plugin.lua
roblox_places/: README.md
runs/: README.md
schemas/: config.schema.json  course.schema.json  observation.v1.json  procedural-course.schema.json  protocol.schema.json
scripts/: audit_live_dynamics.py  calibrate_jump_feasibility.py  compose_dual_view.sh  dagger_privileged_teacher.py  distill_privileged_teacher.py  evaluate_fixed_ppo.py  evaluate_jump_macro.py  evaluate_recurrent_ppo.py  evaluate_stage2_vector.py  export_episode_trace.py  fit_stage17_macro_teacher.py  migrate_segment_progress.py  run_live_env.py  show_course_generation.py  show_obby_completion.py  show_parallel_rollout.py  show_provenance.py  show_stage2_jump.py  show_zero_shot_long_courses.py  smoke_vector_autoreset.py  smoke_vector_env.py  soak_live_resets.py  trace_jump_signal.py  train_fixed_ppo.py  train_recurrent_ppo.py  train_stage2_dagger.py  train_vector_ppo.py  validate_live_m2.py  (+7 more)
(+67 files in other folders)
