[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "roblox-obby-rl"
version = "0.1.0"
description = "External RL training and Luau policy runtime for procedural Roblox obbies"
requires-python = ">=3.11,<3.13"
dependencies = [
  "gymnasium==1.2.1",
  "jsonschema==4.25.1",
  "numpy==2.3.3",
  "stable-baselines3==2.7.0",
  "sb3-contrib==2.7.0",
  "torch==2.8.0",
]

[project.optional-dependencies]
dev = [
  "mypy==1.18.2",
  "pytest==8.4.2",
  "ruff==0.13.2",
]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["python"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["obby_rl"]

[[tool.mypy.overrides]]
module = ["jsonschema", "jsonschema.*"]
ignore_missing_imports = true
